hphp/hack/test/typecheck/class_meth14.php.exp
File "class_meth14.php", line 6, characters 5-8:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity.  (Naming[2113])
